--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -25,8 +25,7 @@
     private User user = new User();
     public void Logout()
     {
-        user.buildUser();
-        user.saveData();
+        User.user.saveData();
         UriHelper.NavigateTo($"");
     }
 }
