--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        @if (user.Type == "Teacher")
+        @if (User.user.Type == "Teacher")
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="makeskilltree">
@@ -50,12 +50,5 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
-    }
-
-    private User user = new User();
-
-    protected override async Task OnInitializedAsync()
-    {
-        user.buildUser();
     }
 }
