--- a/BlazorApp1/Pages/Assignments.razor.css
+++ b/BlazorApp1/Pages/Assignments.razor.css
@@ -1,7 +1,15 @@
-﻿.container {
+﻿.available {
     width: 100%;
     float: left;
     padding: 20px;
     border: 4px solid black;
+    margin: 20px;
+}
+
+.unavailable {
+    width: 100%;
+    float: left;
+    padding: 20px;
+    border: 4px solid blue;
     margin: 20px;
 }
