Fixed assignment shown as taken bug

--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -22,9 +22,9 @@
 </div>
 
 @code{
-    private User user = new User();
     public void Logout()
     {
+        Assignment.AssignmentList.Clear();
         User.user.saveData();
         UriHelper.NavigateTo($"");
     }
