taken assignment info added to user records

--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -235,6 +235,7 @@ else
                 accountInfo += skill + ";0\n";
             }
 
+            accountInfo += "TAKEN ASSIGNMENTS|\n";
 
             // Store the text in a byte array with. UTF8 encoding (8-bit Unicode. Transformation Format)
             byte[] writeArr = Encoding.UTF8.GetBytes(accountInfo);
