--- a/BlazorApp1/Pages/MakeSkillTree.razor
+++ b/BlazorApp1/Pages/MakeSkillTree.razor
@@ -61,7 +61,7 @@ else
 
 @if (SelectedNode != null && editing)
 {
-    <div align="right">
+    <div align="left">
         <p> User Input: </p>
         <EditForm Model="@SelectedNode">
             <label for="Name"> Node Name</label>
@@ -174,6 +174,7 @@ else
     private void AddNode()
     {
         Node node = new Node("N" + index);
+        editing = true;
         Nodes.Add(node);
         index++;
     }
