--- a/BlazorApp1/Pages/MakeSkillTree.razor
+++ b/BlazorApp1/Pages/MakeSkillTree.razor
@@ -137,7 +137,7 @@ else
 
     private void Connectioninput()
     {
-        if (ConnectionInput == "Add Connection") { AddConnector(); } 
+        if (ConnectionInput == "Add Connection") { AddConnection(); } 
         if (ConnectionInput == "Remove Connection") { RemoveConnector(); }
     }
 
