--- a/BlazorApp1/Pages/Persona.razor
+++ b/BlazorApp1/Pages/Persona.razor
@@ -49,6 +49,7 @@
         <p style="display:inline">@s[0]</p>
         <p style="display:inline"> - </p>
         <p style="display:inline">@s[1]</p>
+        <progress value="@s[1]" max="100"> </progress>
         <br />
     }
 </div>
