--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -6,6 +6,7 @@
 @using System.Security.Cryptography;
 @using Objects
 @using System.Text;
+@using System.Text.RegularExpressions;
 
 @inject NavigationManager UriHelper
 @inject IJSRuntime JS;
@@ -183,6 +184,14 @@ else
         else if (newPassword1 != newPassword2)
         {
             // passwords are not the same
+        }   
+        else if (newPassword1.Length < 9)
+        {
+            //password too short
+        }
+        else if (Regex.Match(newPassword1, @"\d+").Success)
+        {
+            //No number in password
         }
         else if (accountType == "none")
         {
