--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -53,11 +53,10 @@ else
         <label for="UserPassword"> Password </label>
         <InputText id="UserPassword" @bind-Value="newPassword1" placeholder="password" type="password" /> <br />
 
-        <p>Please enter in the password again</p>
+        <p>Confirm your password</p>
         <label for="UserPassword"> Password </label>
         <InputText id="UserPassword" @bind-Value="newPassword2" placeholder="password" type="password" /> <br />
         <br/>
-        <h>Check which apply</h>
         <br />
 
 
@@ -72,7 +71,7 @@ else
         </label>
         <hr/>
         <div id="dvStudent" style="display: none">
-            Please enter your teachers access code
+            Please enter your class access code
             <br/>
             <label for="AccessCode"> Access Code </label>
             <InputText id="AccessCode" @bind-Value="accessCode" placeholder="Ex: 12345" /> <br />
